[gd_scene load_steps=7 format=3 uid="uid://dsx5cnrg2po27"]

[ext_resource type="FontFile" uid="uid://bbvqbvo8bcb8f" path="res://Xolonium-Regular.ttf" id="1_6js26"]
[ext_resource type="Texture2D" uid="uid://drppjginuc8nn" path="res://Estrela.png" id="1_ew511"]
[ext_resource type="Script" path="res://ranking.gd" id="1_lgkrl"]
[ext_resource type="Texture2D" uid="uid://sy74exrydcm5" path="res://Estrela_apagada.png" id="2_0a265"]
[ext_resource type="Texture2D" uid="uid://xu3gsy4hlpg6" path="res://Cadeado.png" id="5_e522j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_b5hw1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ew511")
}],
"loop": true,
"name": &"acesa",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0a265")
}],
"loop": true,
"name": &"apagada",
"speed": 5.0
}]

[node name="Ranking" type="Button"]
offset_right = 80.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("1_6js26")
theme_override_font_sizes/font_size = 40
text = "1"
script = ExtResource("1_lgkrl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 105.0
color = Color(0.164706, 0.164706, 0.164706, 1)
metadata/_edit_group_ = true

[node name="Estrela1" type="AnimatedSprite2D" parent="ColorRect"]
position = Vector2(14.4, 12.5)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_b5hw1")
animation = &"apagada"

[node name="Estrela2" type="AnimatedSprite2D" parent="ColorRect"]
position = Vector2(40, 12.5)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_b5hw1")
animation = &"apagada"

[node name="Estrela3" type="AnimatedSprite2D" parent="ColorRect"]
position = Vector2(65.6, 12.5)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_b5hw1")
animation = &"apagada"

[node name="Lock" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
color = Color(0.164706, 0.164706, 0.164706, 1)

[node name="Sprite2D" type="Sprite2D" parent="Lock"]
position = Vector2(40, 30)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_e522j")
